--- a/src/gallery-slides/assets/gallery-slides-core.css
+++ b/src/gallery-slides/assets/gallery-slides-core.css
@@ -107,10 +107,10 @@ section {
 /* Navigation classes */
 .yui3-navigationcontrols {
     position: fixed;
-    bottom: 50px;
-    right: 50px;
-    width: 90px;
-    height: 25px;
+    bottom: 10px;
+    right: 10px;
+    width: 110px;
+    height: 110px;
 }
 
 .yui3-navigationbutton {
@@ -132,7 +132,7 @@ section {
 }
 
 .yui3-navigationbutton-right {
-    top: 0;
+    top: 42px;
     right: 0;
     border-left: 22px solid #13daec;
 }
@@ -142,13 +142,33 @@ section {
 }
 
 .yui3-navigationbutton-left {
-    top: 0;
+    top: 42px;
     left: 0;
     border-right: 22px solid #13daec;
 }
 
 .yui3-navigationbutton-left:hover {
     border-right-color: #71e9f4;
+}
+
+.yui3-navigationbutton-up {
+    top: 0;
+    left: 42px;
+    border-bottom: 22px solid #13daec;
+}
+
+.yui3-navigationbutton-up:hover {
+    border-bottom-color: #71e9f4;
+}
+
+.yui3-navigationbutton-down {
+    bottom: 0;
+    left: 42px;
+    border-top: 22px solid #13daec;
+}
+
+.yui3-navigationbutton-down:hover {
+    border-top-color: #71e9f4;
 }
 
 .yui3-navigationbutton-disabled {
