--- a/src/gallery-slides/assets/gallery-slides-core.css
+++ b/src/gallery-slides/assets/gallery-slides-core.css
@@ -18,9 +18,6 @@ body {
     -webkit-transition: -webkit-transform 0.8s ease;
 }
 
-.container {
-}
-
 .slides {
     position: relative;
 
@@ -28,22 +25,7 @@ body {
     height: 700px;
 
     margin-left: 25%;
-}
 
-section {
-    position: absolute;
-    width: 100%;
-    opacity: 0;
-    display: block;
-    visibility: hidden;
-}
-
-.present {
-    opacity: 1;
-    visibility: visible;
-}
-
-.slides {
     -webkit-transition: -webkit-perspective .4s ease;
     -moz-transition: -moz-perspective .4s ease;
     -ms-transition: -ms-perspective .4s ease;
@@ -63,6 +45,12 @@ section {
 
 .slides>section,
 .slides>section>section {
+    position: absolute;
+    width: 100%;
+    opacity: 0;
+    display: block;
+    visibility: hidden;
+
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
     -ms-transform-style: preserve-3d;
@@ -88,6 +76,14 @@ section {
     transform 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985),
     visibility 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985),
     opacity 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+}
+
+.slides>section.present,
+.slides>section>section.present {
+    display: block;
+    visibility: visible;
+    z-index: 11;
+    opacity: 1;
 }
 
 .slides>section.past {
