Added CSS support for subsections.

--- a/src/gallery-slides/assets/gallery-slides-core.css
+++ b/src/gallery-slides/assets/gallery-slides-core.css
@@ -100,6 +100,27 @@ body {
     transform: translate3d(100%, 0, 0) rotateY(90deg) translate3d(100%, 0, 0);
 }
 
+.slides>section>section.past,
+.slides>section>section.past {
+    display: block;
+    opacity: 0;
+
+    -webkit-transform: translate3d(0, -300px, 0) rotateX(70deg) translate3d(0, -300px, 0);
+    -moz-transform: translate3d(0, -300px, 0) rotateX(70deg) translate3d(0, -300px, 0);
+    -ms-transform: translate3d(0, -300px, 0) rotateX(70deg) translate3d(0, -300px, 0);
+    transform: translate3d(0, -300px, 0) rotateX(70deg) translate3d(0, -300px, 0);
+}
+.slides>section>section.future,
+.slides>section>section.future {
+    display: block;
+    opacity: 0;
+
+    -webkit-transform: translate3d(0, 300px, 0) rotateX(-70deg) translate3d(0, 300px, 0);
+    -moz-transform: translate3d(0, 300px, 0) rotateX(-70deg) translate3d(0, 300px, 0);
+    -ms-transform: translate3d(0, 300px, 0) rotateX(-70deg) translate3d(0, 300px, 0);
+    transform: translate3d(0, 300px, 0) rotateX(-70deg) translate3d(0, 300px, 0);
+}
+
 /* Navigation classes */
 .yui3-navigationcontrols {
     position: fixed;
