--- a/src/gallery-slides/assets/gallery-slides-core.css
+++ b/src/gallery-slides/assets/gallery-slides-core.css
@@ -193,6 +193,36 @@ body {
     cursor: default;
 }
 
+/* Progress bar */
+.yui3-progressbar {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    height: 3px;
+    width: 100%;
+}
+
+.yui3-progressbar:after {
+    content: '';
+    display: 'block';
+    position: absolute;
+    height: 20px;
+    width: 100%;
+    top: -20px;
+}
+
+.yui3-progressbar-content {
+    display: block;
+    height: 100%;
+    width: 0px;
+
+    -webkit-transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+    -moz-transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+    -ms-transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+    -o-transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+    transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+}
+
 /* DEBUG classes */
 .debug>.slides {
     border: 1px solid red;
