--- a/src/gallery-slides/assets/skins/sam/gallery-slides-skin.css
+++ b/src/gallery-slides/assets/skins/sam/gallery-slides-skin.css
@@ -24,3 +24,17 @@ body {
     letter-spacing: -0.02em;
     color: #eeeeee;
 }
+
+.yui3-progressbar {
+    background: rgba(0, 0, 0, 0.2);
+}
+
+.yui3-progressbar-content {
+    background: #13daec;
+
+    -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+    -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+    -ms-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+    -o-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+    transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+}
